--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -1,9 +1,9 @@
-{% extends '_base.html' %}
+{% extends 'baseform.html' %}
 {% load crispy_forms_tags %}
 
 {% block title %}Log in{% endblock %}
 
-{% block content %}
+{% block form %}
 <h2 class="title">Log in</h2>
 <form method="post">
   {% csrf_token %}
@@ -13,4 +13,4 @@
   </div>
 </form>
 <a href="{% url 'account_reset_password' %}">Forgot Password?</a>
-{% endblock content %}
+{% endblock %}
