--- a/templates/account/password_reset_from_key_done.html
+++ b/templates/account/password_reset_from_key_done.html
@@ -1,9 +1,9 @@
-{% extends '_base.html' %}
+{% extends 'baseform.html' %}
 {% load crispy_forms_tags %}
 
-{% block title %}Change Password Done{% endblock title %}
+{% block title %}Change Password Done{% endblockitle %}
 
-{% block content %}
+{% block form %}
 <h1 class="title">Password Change Done</h1>
 <p class="subtitle">Your password has been changed.</p>
-{% endblock content %}
+{% endblock %}
