--- a/templates/account/password_set.html
+++ b/templates/account/password_set.html
@@ -1,9 +1,9 @@
-{% extends '_base.html' %}
+{% extends 'baseform.html' %}
 {% load crispy_forms_tags %}
 
-{% block title %}Set Password{% endblock title %}
+{% block title %}Set Password{% endblock %}
 
-{% block content %}
+{% block form %}
 <form method="POST" action="" class="password_set">
   {% csrf_token %}
   {{ form | crispy }}
@@ -12,4 +12,4 @@
     Password</button>
   </div>
 </form>
-{% endblock content %}
+{% endblock %}
