--- a/templates/account/signup_closed.html
+++ b/templates/account/signup_closed.html
@@ -1,10 +1,10 @@
-{% extends "_base.html" %}
+{% extends "baseform.html" %}
 
 {% load i18n %}
 
 {% block head_title %}{% trans "Sign Up Closed" %}{% endblock %}
 
-{% block content %}
+{% block form %}
 <h1 class="title">{% trans "Sign Up Closed" %}</h1>
 
 <p class="subtitle">{% trans "We are sorry, but the sign up is currently closed." %}</p>
