--- a/templates/404.html
+++ b/templates/404.html
@@ -1,7 +1,7 @@
-{% extends '_base.html' %}
+{% extends 'base.html' %}
 
 {% block title %}404 Page not found{% endblock %}
 
 {% block content %}
 <h1 class="title">Page not found</h1>
-{% endblock content %}
+{% endblock %}
