--- a/templates/account/password_change.html
+++ b/templates/account/password_change.html
@@ -1,9 +1,9 @@
-{% extends '_base.html' %}
+{% extends 'baseform.html' %}
 {% load crispy_forms_tags %}
 
 {% block title %}Change Password{% endblock %}
 
-{% block content %}
+{% block form %}
 <h2 class="title">Change Password</h2>
 <form method="post" action="{% url 'account_change_password' %}">
   {% csrf_token %}
@@ -12,4 +12,4 @@
     <button class="button is-primary" type="submit">Change Password</button>
   </div>
 </form>
-{% endblock content %}
+{% endblock %}
