--- a/templates/account/password_reset.html
+++ b/templates/account/password_reset.html
@@ -1,9 +1,9 @@
-{% extends '_base.html' %}
+{% extends 'baseform.html' %}
 {% load crispy_forms_tags %}
 
 {% block title %}Password Reset{% endblock %}
 
-{% block content %}
+{% block form %}
 <h2 class="title">Forgot your password? </h2>
 <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
   {% csrf_token %}
@@ -12,4 +12,4 @@
     <button class="button is-primary" type="submit">Reset Password</button>
   </div>
 </form>
-{% endblock content %}
+{% endblock %}
