--- a/templates/account/password_reset_done.html
+++ b/templates/account/password_reset_done.html
@@ -1,9 +1,9 @@
-{% extends '_base.html' %}
+{% extends 'baseform.html' %}
 {% load crispy_forms_tags %}
 
 {% block title %}Password Reset Done{% endblock %}
 
-{% block content %}
+{% block form %}
 <h1 class="title">Password Reset</h1>
 <p class="subtitle">We have sent you an e-mail. Please contact us if you do not receive it in a few minutes.</p>
-{% endblock content %}
+{% endblock %}
