--- a/templates/account/password_reset_from_key.html
+++ b/templates/account/password_reset_from_key.html
@@ -1,9 +1,9 @@
-{% extends '_base.html' %}
+{% extends 'baseform.html' %}
 {% load crispy_forms_tags %}
 
-{% block title %}Change Password{% endblock title %}
+{% block title %}Change Password{% endblock %}
 
-{% block content %}
+{% block form %}
   <h1 class="title">{% if token_fail %}Bad Token{% else %}Change Password{% endif %}</h1>
 
   {% if token_fail %}
@@ -21,4 +21,4 @@
         <p class="is-primary">Your password is now changed.</p>
     {% endif %}
   {% endif %}
-{% endblock content%}
+{% endblock%}
