--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -1,9 +1,9 @@
-{% extends '_base.html' %}
+{% extends 'baseform.html' %}
 {% load crispy_forms_tags %}
 
 {% block title %}Sign up{% endblock %}
 
-{% block content %}
+{% block form %}
 <h2 class="title">Sign up</h2>
 <form method="post">
   {% csrf_token %}
@@ -12,4 +12,4 @@
     <button class="button is-primary" type="submit">Sign up</button>
   </div>
 </form>
-{% endblock content %}
+{% endblock %}
