--- a/templates/_base.html
+++ b/templates/_base.html
@@ -10,6 +10,7 @@
     <meta name="author" content="Brady Fomegne">
     <link rel="shortcut icon" type="image/x-icon" href="{% static 'images/favicon.ico' %}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css" />
+    <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}">
   </head>
 
   <body>
