--- a/templates/base.html
+++ b/templates/base.html
@@ -15,15 +15,6 @@
     </div>
 
     <div id="navbarBasicExample" class="navbar-menu">
-      <div class="navbar-start">
-        <a class="navbar-item" href="{% url 'home' %}">
-          Home
-        </a>
-        <a class="navbar-item" href="{% url 'about' %}">
-          About
-        </a>
-      </div>
-
       <div class="navbar-end">
         {% if user.is_authenticated %}
         <div class="navbar-item has-dropdown is-hoverable">
@@ -45,10 +36,10 @@
         {% else %}
         <div class="navbar-item">
           <div class="buttons">
-            <a class="button is-primary" href="{% url 'account_signup' %}">
+            <a class="button is-primary" href="{% url 'account_signup' %}?next={{ request.GET.next }}">
               <strong>Sign up</strong>
             </a>
-            <a class="button is-light" href="{% url 'account_login' %}">
+            <a class="button is-light" href="{% url 'account_login' %}?next={{ request.GET.next }}">
               Log in
             </a>
           </div>
