feat(core): Export records Exports form records in CSV

--- a/core/templates/core/records.html
+++ b/core/templates/core/records.html
@@ -1,3 +1,4 @@
+<p><a class="button is-info" href="{% url 'export' entries.first.form.pk %}" target="_blank">Download</a></p>
 <div class="columns is-multiline">
 {% for entry in entries %}
 <div class="column is-full">
